# ennomotive_challenge

./: .gitignore  README.md
ros_main_ws/: README.md
ros_main_ws/devel/: .catkin  .rosinstall  setup.sh
ros_main_ws/devel/share/main_node/cmake/: main_nodeConfig.cmake
ros_main_ws/devel/share/motors/cmake/: motorsConfig.cmake
ros_main_ws/devel/share/ping/cmake/: pingConfig.cmake
ros_main_ws/src/camera/: CMakeLists.txt  package.xml
ros_main_ws/src/camera/src/: camera_node.cpp  includes.ihh  index.cpp  index.hpp  object_detect.cpp  object_detect.hpp  vision_processing.hpp
ros_main_ws/src/joystick_node/: CMakeLists.txt
ros_main_ws/src/joystick_node/src/: joystick_node.cpp
ros_main_ws/src/main_node/: CMakeLists.txt  package.xml
ros_main_ws/src/main_node/src/: action_factory.hpp  collision.hpp  logger.hpp  main.cpp  navigation.hpp  robot_action.hpp  robot_state.hpp  sensor_fusion.hpp  statefactory.hpp  statespace.cpp
ros_main_ws/src/motors/: CMakeLists.txt  package.xml
ros_main_ws/src/motors/src/scripts/: motor_all.py  motor_control.py  motor_joys.py  motor_node.py  motor_publ.py  motor_stop.py  motor_subs.py
ros_main_ws/src/ping/: CMakeLists.txt
ros_main_ws/src/ping/src/scripts/: .ping_subs.py.swp  ping_publ.py  ping_subs.py
ros_slave_ws/: .gitignore  coordinates  icp_config.broken  icp_config.ini  icp_slam.ini  log  logfile  navigator.ini
ros_slave_ws/src/imu/: CMakeLists.txt  package.xml
ros_slave_ws/src/imu/src/: I2CBus.cpp  I2CBus.hpp  IMU.hpp  L3G.cpp  L3G.hpp  LSM303.cpp  LSM303.hpp  MinIMU9.cpp  imu_broadcaster.cpp  imu_broadcaster.hpp  imu_node.cpp  includes.ihh
ros_slave_ws/src/imu/src/node_files/: imu_data.cpp  slammer.cpp  slammer.hpp
ros_slave_ws/src/imu_node/: CMakeLists.txt  README.md  package.xml
ros_slave_ws/src/imu_node/src/: exceptions.hpp  imu_broadcaster.cpp  imu_broadcaster.hpp  imu_node.cpp  includes.ihh  vector.hpp
ros_slave_ws/src/leds/: CMakeLists.txt  package.xml
ros_slave_ws/src/leds/src/scripts/: led_node.py  simple_led.py
ros_slave_ws/src/mrpt_slam/: CMakeLists.txt  package.xml
ros_slave_ws/src/mrpt_slam/src/: coordinate.hpp  icp_slam.ini  includes.ihh  laserscan.cpp  laserscan.hpp  lidar.cpp  lidar.hpp  map.cpp  map.hpp  navigator.cpp  navigator.hpp  navigator.ini  planner.cpp  planner.hpp  slam_node.cpp  slammer.cpp  slammer.hpp
ros_slave_ws/src/mrpt_slam/src/imu/: LSM303.cpp  MinIMU9.hpp  imu_broadcaster.cpp  imu_broadcaster.hpp  includes.ihh  read_imu.cpp  read_imu.hpp
ros_slave_ws/src/ping/: package.xml
ros_slave_ws/src/ping/src/scripts/: ping_publ.py  ping_subs.py
