<?xml version="1.0"?>
<package>
  <name>camera</name>
  <version>0.1.0</version>
  <description>The camera package</description>
  <maintainer email="a.gkiokas@ortelio.co.uk">Alex Giokas</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
