<?xml version="1.0"?>
<package>
    <name>imu_node</name>
    <version>0.1.0</version>
    <description>The miniIMU-9 node publisher</description>
    <maintainer email="a.gkiokas@ortelio.co.uk">Alex Giokas</maintainer>
    <license>Apache 2.0</license>
    <url type="website">https://github.com/ortelio/ennomotive_challenge</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <export>
    </export>
</package>
