<?xml version="1.0"?>
<package>
  <name>ping</name>
  <version>0.0.1</version>
  <description>The ping package to measure distances</description>
  <license>TODO</license>
  <maintainer email="m.ramos@ortelio.co.uk">Maria Ramos</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
</package>
